<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CB Miraflores</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_calendario">Temporada 15/16</string>
    <string name="title_activity_resultados">CB Miraflores Burgos</string>
    <string name="ourense">Club Ourense Baloncesto</string>
    <string name="burgos">San Pablo Inmobiliaria Burgos</string>
    <string name="castello">Amics Castelló</string>
    <string name="palma">Palma Air Europa</string>
    <string name="huesca">Peñas Huesca</string>
    <string name="breogan">Cafes Candelas Breogan</string>
    <string name="joventut">CB Prat JoventuT</string>
    <string name="coruna">Leyma Basquet Coruña</string>
    <string name="cocinas">Cocinas.com</string>
    <string name="melilla">Club Melilla Baloncesto</string>
    <string name="oviedo">Union Financiera Baloncesto Oviedo</string>
    <string name="palencia">Quesos Cerrato Palencia</string>
    <string name="caceres">Caceres Patrimonio de la Humanidad</string>
    <string name="lleida">Actel Força Lleida</string>
    <string name="barsa">F.C. Barcelona Lassa</string>
    <string name="navarra">Planasa Navarra</string>
    <string name="title_activity_bar_notification">BarNotification</string>
    <string name="title_activity_plantilla">Plantilla CB Miraflores Burgos</string>
    <string name="title_activity_custom_dialog">CB Miraflores Burgos</string>
    <string name="title_activity_clasif">CB Miraflores Burgos</string>
    <string name="noticias_leb_oro_">Noticias LEB ORO:</string>
    <string name="rankings">Rankings</string>
    <string name="calendario">Calendario</string>
    <string name="virtual">Virtual</string>
    <string name="clasificaci_n">Clasificación</string>
    <string name="plantilla">Plantilla</string>
    <string name="info_club">Info. Club</string>
    <string name="j01">San Pablo Inmobiliaria Burgos - F.C. Barcelona Lassa\n\t<b>Vie. 02 de Oct. de 2015 \t21:00</b></string>
    <string name="j02">Planasa Navarra - San Pablo Inmobiliaria Burgos\n\t<b>Vie. 09 de Oct. de 2015 \t20:30</b></string>
    <string name="j03">San Pablo Inmobiliaria Burgos - Actel Força Lleida\n\t<b>Vie. 16 de Oct. de 2015 \t21:00</b></string>
    <string name="j04">Quesos Cerrato Palencia - San Pablo Inmobiliaria Burgos\n\t<b>Vie. 23 de Oct. de 2015 \t21:00</b></string>
    <string name="j05">San Pablo Inmobiliaria Burgos - Club Melilla Baloncesto\n\t<b>Vie. 30 de Oct. de 2015 \t21:00</b></string>
    <string name="j06">Leyma Basquet Coruña - San Pablo Inmobiliaria Burgos\n\t<b>Vie. 06 de Nov. de 2015 \t21:00</b></string>
    <string name="j07">San Pablo Inmobiliaria Burgos - Cafes Candelas Breogan\n\t<b>Mi. 11 de Nov. de 2015 \t21:00</b></string>
    <string name="j08">Palma Air Europa - San Pablo Inmobiliaria Burgos\n\t<b>Dom. 15 de Nov. de 2015 \t18:00</b></string>
    <string name="j09">Club Ourense Baloncesto - San Pablo Inmobiliaria Burgos\n\t<b>Sab. 21 de Nov. de 2015 \t18:00</b></string>
    <string name="j10">San Pablo Inmobiliaria Burgos - Amics Castelló\n\t<b>Vie. 27 de Nov. de 2015 \t21:00</b></string>
    <string name="j11">Peñas Huesca - San Pablo Inmobiliaria Burgos\n\t<b>Vie. 04 de Dic. de 2015 \t19:00</b></string>
    <string name="j12">San Pablo Inmobiliaria Burgos - CB Prat Joventut\n\t<b>Vie. 11 de Dic. de 2015 \t21:00</b></string>
    <string name="j13">Cocinas.com - San Pablo Inmobiliaria Burgos\n\t<b>Mi. 16 de Dic. de 2015 \t20:30</b></string>
    <string name="j14">San Pablo Inmobiliaria Burgos - Union Financiera Baloncesto Oviedo\n\t<b>Dom. 20 de Dic. de 2015 \t19:00</b></string>
    <string name="j15">Caceres Patrimonio de la Humanidad - San Pablo Inmobiliaria Burgos\n\t<b>Mi. 30 de Dic. de 2015 \t21:00</b></string>
    <string name="j16">F.C. Barcelona Lassa - San Pablo Inmobiliaria Burgos\n\t<b>Lun. 04 de Ene. de 2016 \t18:00</b></string>
    <string name="j17">San Pablo Inmobiliaria Burgos - Planasa Navarra\n\t<b>Vie. 08 de Ene. de 2016 \t21:00</b></string>
    <string name="j18">Actel Força Lleida - San Pablo Inmobiliaria Burgos\n\t<b>Vie. 15 de Ene. de 2016 \t21:00</b></string>
    <string name="j19">San Pablo Inmobiliaria Burgos - Quesos Cerrato Palencia\n\t<b>Vie. 22 de Ene. de 2016 \t21:00</b></string>
    <string name="j20">Club Melilla Baloncesto - San Pablo Inmobiliaria Burgos\n\t<b>Vie. 05 de Feb. de 2016 \t21:00</b></string>
    <string name="j21">San Pablo Inmobiliaria Burgos - Leyma Basquet Coruña\n\t<b>Vie. 12 de Feb. de 2016 \t21:00</b></string>
    <string name="j22">Cafes Candelas Breogan - San Pablo Inmobiliaria Burgos\n\t<b>Sab. 20 de Feb. de 2016 \t19:15</b></string>
    <string name="j23">San Pablo Inmobiliaria Burgos - Palma Air Europa\n\t<b>Vie. 26 de Feb. de 2016 \t21:00</b></string>
    <string name="j24">San Pablo Inmobiliaria Burgos - Club Ourense Baloncesto\n\t<b>Vie. 04 de Mar. de 2016 \t21:00</b></string>
    <string name="j25">Amics Castelló - San Pablo Inmobiliaria Burgos\n\t<b>Vie. 11 de Mar. de 2016 \t20:30</b></string>
    <string name="j26">San Pablo Inmobiliaria Burgos - Peñas Huesca\n\t<b>Vie. 18 de Mar. de 2016 \t21:00</b></string>
    <string name="j27">CB Prat Joventut - San Pablo Inmobiliaria Burgos\n\t<b>Dom. 27 de Mar. de 2016 \t12:30</b></string>
    <string name="j28">San Pablo Inmobiliaria Burgos - Cocinas.com\n\t<b>Vie. 01 de Abr. de 2016 \t21:00</b></string>
    <string name="j29">Union Financiera Baloncesto Oviedo - San Pablo Inmobiliaria Burgos\n\t<b>Vie. 08 de Abr. de 2016 \t21:00</b></string>
    <string name="j30">San Pablo Inmobiliaria Burgos - Caceres Patrimonio de la Humanidad\n\t<b>Vie. 15 de Abr. de 2016  \t21:00</b></string>
    <string name="title_activity_clendar">Calendario Temp. 15/16</string>
    <string name="title_section1">Todos los partidos</string>
    <string name="title_section2">Partidos como Locales</string>
    <string name="title_section3">Partidos como Visitantes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_c_">C_Activity</string>

</resources>